samples/_failures_safe/1761668383_3be2c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67f5bd95.c: In function ‘main’:
./samples/SAFE/__tmp_67f5bd95.c:132:5: error: expected declaration or statement at end of input
  132 |     printf("=========================\n");
      |     ^~~~~~
